[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "introspector-meta-meme-paper"
version = "0.0.1"
description = "Paper - Introspector Meta Meme"
license = "AGPL"
authors = ["mike<jmikedupont2@gmail.com>"]
homepage = "https://github.com/jmikedupont2/meta-introspector-paper"
documentation = ""  # Add this if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/jmikedupont2/meta-introspector-paper"
keywords = [
"math",
"univalent foundations",
"homotopy type theory",
"unimath",
"coq",
"proof",
"formal reasoning",
"logic",
"artificial intelligence",
"deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: AGPL",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
# Add development dependencies here
